cmake_minimum_required(VERSION 3.29)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
project(CS280)


add_executable(CS280 main.cpp
        main.cpp
        main.cpp
        main.cpp
        main.cpp
        main.cpp
        "RA Submissions/RA1_Welcome_Message.cpp"
        "RA Submissions/RA2_Submission.cpp"
        "RA Submissions/RA2_Submission.h"
        "RA Submissions/RA3_CountingInteger.cpp"
        "RA Submissions/RA4_M_Phillips.cpp"
)
